[gd_scene load_steps=16 format=3 uid="uid://bdybmjlxot0mq"]

[ext_resource type="Script" path="res://scripts/phase2/diving_game.gd" id="1_ke0o0"]
[ext_resource type="Texture2D" uid="uid://c6pkajjkptmwc" path="res://assets/phase2/Tiles.png" id="2_wuikn"]
[ext_resource type="PackedScene" uid="uid://ci0oyjxlnaq0m" path="res://scenes/phase2/player_p2.tscn" id="3_kp1fu"]
[ext_resource type="Texture2D" uid="uid://c54dffb8x3hso" path="res://assets/phase1/2d_lights_and_shadows_neutral_point_light.webp" id="4_jdcjd"]
[ext_resource type="FontFile" uid="uid://day2ceg8scrki" path="res://assets/ByteBounce.ttf" id="5_wo6ft"]
[ext_resource type="PackedScene" uid="uid://b77f7prnfeif5" path="res://scenes/phase2/DialogPlayer.tscn" id="6_4tm0e"]
[ext_resource type="PackedScene" uid="uid://ccloq55wefjsi" path="res://scenes/phase2/sea_shell.tscn" id="7_ss8st"]
[ext_resource type="PackedScene" uid="uid://r6jswodht8nn" path="res://scenes/phase2/sea_grass.tscn" id="8_k6ni2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1iwxa"]
texture = ExtResource("2_wuikn")
6:18/size_in_atlas = Vector2i(1, 3)
6:18/0 = 0
7:18/size_in_atlas = Vector2i(1, 3)
7:18/0 = 0
8:18/size_in_atlas = Vector2i(1, 3)
8:18/0 = 0
9:18/size_in_atlas = Vector2i(1, 3)
9:18/0 = 0
1:19/0 = 0
12:21/0 = 0
12:22/0 = 0

[sub_resource type="TileSet" id="TileSet_bxiku"]
sources/0 = SubResource("TileSetAtlasSource_1iwxa")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_odv41"]
a = Vector2(657, 226)
b = Vector2(1, 226)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mf12q"]
a = Vector2(657, 226)
b = Vector2(1, 226)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jrm8t"]
a = Vector2(-7, -1)
b = Vector2(-6, 226)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_b72an"]
a = Vector2(657, 226)
b = Vector2(656, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ip0t"]
size = Vector2(663, 15)

[node name="DivingGame" type="Node2D"]
texture_filter = 1
script = ExtResource("1_ke0o0")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
texture_filter = 1
position = Vector2(97, 157)
scale = Vector2(0.5, 0.5)
color = Color(0.10748, 0.10748, 0.10748, 1)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
position = Vector2(1, 2)
tile_set = SubResource("TileSet_bxiku")
format = 2
layer_0/tile_data = PackedInt32Array(65536, 393216, 18, 65537, 393216, 18, 65538, 393216, 18, 65539, 393216, 18, 65540, 393216, 18, 65541, 393216, 18, 65542, 393216, 18, 65543, 393216, 18, 65544, 393216, 18, 65545, 393216, 18, 65546, 393216, 18, 65547, 393216, 18, 65548, 393216, 18, 65549, 393216, 18, 65550, 393216, 18, 65551, 393216, 18, 65552, 393216, 18, 65553, 393216, 18, 65554, 393216, 18, 65555, 393216, 18, 65556, 393216, 18, 65557, 393216, 18, 65558, 393216, 18, 65559, 393216, 18, 65560, 393216, 18, 65561, 393216, 18, 65562, 393216, 18, 65563, 393216, 18, 65564, 393216, 18, 65565, 393216, 18, 65566, 393216, 18, 65567, 393216, 18, 65568, 393216, 18, 65569, 393216, 18, 65570, 393216, 18, 65571, 393216, 18, 65572, 393216, 18, 65573, 393216, 18, 65574, 393216, 18, 65575, 393216, 18, 65576, 393216, 18, 196608, 65536, 19, 262144, 65536, 19, 327680, 65536, 19, 393216, 65536, 19, 458752, 65536, 19, 524288, 65536, 19, 589824, 65536, 19, 196609, 65536, 19, 262145, 65536, 19, 327681, 65536, 19, 393217, 65536, 19, 458753, 65536, 19, 524289, 65536, 19, 589825, 65536, 19, 196610, 65536, 19, 262146, 65536, 19, 327682, 65536, 19, 393218, 65536, 19, 458754, 65536, 19, 524290, 65536, 19, 589826, 65536, 19, 196611, 65536, 19, 262147, 65536, 19, 327683, 65536, 19, 393219, 65536, 19, 458755, 65536, 19, 524291, 65536, 19, 589827, 65536, 19, 196612, 65536, 19, 262148, 65536, 19, 327684, 65536, 19, 393220, 65536, 19, 458756, 65536, 19, 524292, 65536, 19, 589828, 65536, 19, 196613, 65536, 19, 262149, 65536, 19, 327685, 65536, 19, 393221, 65536, 19, 458757, 65536, 19, 524293, 65536, 19, 589829, 65536, 19, 196614, 65536, 19, 262150, 65536, 19, 327686, 65536, 19, 393222, 65536, 19, 458758, 65536, 19, 524294, 65536, 19, 589830, 65536, 19, 196615, 65536, 19, 262151, 65536, 19, 327687, 65536, 19, 393223, 65536, 19, 458759, 65536, 19, 524295, 65536, 19, 589831, 65536, 19, 196616, 65536, 19, 262152, 65536, 19, 327688, 65536, 19, 393224, 65536, 19, 458760, 65536, 19, 524296, 65536, 19, 589832, 65536, 19, 196617, 65536, 19, 262153, 65536, 19, 327689, 65536, 19, 393225, 65536, 19, 458761, 65536, 19, 524297, 65536, 19, 589833, 65536, 19, 196618, 65536, 19, 262154, 65536, 19, 327690, 65536, 19, 393226, 65536, 19, 458762, 65536, 19, 524298, 65536, 19, 589834, 65536, 19, 196619, 65536, 19, 262155, 65536, 19, 327691, 65536, 19, 393227, 65536, 19, 458763, 65536, 19, 524299, 65536, 19, 589835, 65536, 19, 196620, 65536, 19, 262156, 65536, 19, 327692, 65536, 19, 393228, 65536, 19, 458764, 65536, 19, 524300, 65536, 19, 589836, 65536, 19, 196621, 65536, 19, 262157, 65536, 19, 327693, 65536, 19, 393229, 65536, 19, 458765, 65536, 19, 524301, 65536, 19, 589837, 65536, 19, 196622, 65536, 19, 262158, 65536, 19, 327694, 65536, 19, 393230, 65536, 19, 458766, 65536, 19, 524302, 65536, 19, 589838, 65536, 19, 196623, 65536, 19, 262159, 65536, 19, 327695, 65536, 19, 393231, 65536, 19, 458767, 65536, 19, 524303, 65536, 19, 589839, 65536, 19, 196624, 65536, 19, 262160, 65536, 19, 327696, 65536, 19, 393232, 65536, 19, 458768, 65536, 19, 524304, 65536, 19, 589840, 65536, 19, 196625, 65536, 19, 262161, 65536, 19, 327697, 65536, 19, 393233, 65536, 19, 458769, 65536, 19, 524305, 65536, 19, 589841, 65536, 19, 196626, 65536, 19, 262162, 65536, 19, 327698, 65536, 19, 393234, 65536, 19, 458770, 65536, 19, 524306, 65536, 19, 589842, 65536, 19, 196627, 65536, 19, 262163, 65536, 19, 327699, 65536, 19, 393235, 65536, 19, 458771, 65536, 19, 524307, 65536, 19, 589843, 65536, 19, 196628, 65536, 19, 262164, 65536, 19, 327700, 65536, 19, 393236, 65536, 19, 458772, 65536, 19, 524308, 65536, 19, 589844, 65536, 19, 196629, 65536, 19, 262165, 65536, 19, 327701, 65536, 19, 393237, 65536, 19, 458773, 65536, 19, 524309, 65536, 19, 589845, 65536, 19, 196630, 65536, 19, 262166, 65536, 19, 327702, 65536, 19, 393238, 65536, 19, 458774, 65536, 19, 524310, 65536, 19, 589846, 65536, 19, 196631, 65536, 19, 262167, 65536, 19, 327703, 65536, 19, 393239, 65536, 19, 458775, 65536, 19, 524311, 65536, 19, 589847, 65536, 19, 196632, 65536, 19, 262168, 65536, 19, 327704, 65536, 19, 393240, 65536, 19, 458776, 65536, 19, 524312, 65536, 19, 589848, 65536, 19, 196633, 65536, 19, 262169, 65536, 19, 327705, 65536, 19, 393241, 65536, 19, 458777, 65536, 19, 524313, 65536, 19, 589849, 65536, 19, 196634, 65536, 19, 262170, 65536, 19, 327706, 65536, 19, 393242, 65536, 19, 458778, 65536, 19, 524314, 65536, 19, 589850, 65536, 19, 196635, 65536, 19, 262171, 65536, 19, 327707, 65536, 19, 393243, 65536, 19, 458779, 65536, 19, 524315, 65536, 19, 589851, 65536, 19, 196636, 65536, 19, 262172, 65536, 19, 327708, 65536, 19, 393244, 65536, 19, 458780, 65536, 19, 524316, 65536, 19, 589852, 65536, 19, 196637, 65536, 19, 262173, 65536, 19, 327709, 65536, 19, 393245, 65536, 19, 458781, 65536, 19, 524317, 65536, 19, 589853, 65536, 19, 196638, 65536, 19, 262174, 65536, 19, 327710, 65536, 19, 393246, 65536, 19, 458782, 65536, 19, 524318, 65536, 19, 589854, 65536, 19, 196639, 65536, 19, 262175, 65536, 19, 327711, 65536, 19, 393247, 65536, 19, 458783, 65536, 19, 524319, 65536, 19, 589855, 65536, 19, 196640, 65536, 19, 262176, 65536, 19, 327712, 65536, 19, 393248, 65536, 19, 458784, 65536, 19, 524320, 65536, 19, 589856, 65536, 19, 196641, 65536, 19, 262177, 65536, 19, 327713, 65536, 19, 393249, 65536, 19, 458785, 65536, 19, 524321, 65536, 19, 589857, 65536, 19, 196642, 65536, 19, 262178, 65536, 19, 327714, 65536, 19, 393250, 65536, 19, 458786, 65536, 19, 524322, 65536, 19, 589858, 65536, 19, 196643, 65536, 19, 262179, 65536, 19, 327715, 65536, 19, 393251, 65536, 19, 458787, 65536, 19, 524323, 65536, 19, 589859, 65536, 19, 196644, 65536, 19, 262180, 65536, 19, 327716, 65536, 19, 393252, 65536, 19, 458788, 65536, 19, 524324, 65536, 19, 589860, 65536, 19, 196645, 65536, 19, 262181, 65536, 19, 327717, 65536, 19, 393253, 65536, 19, 458789, 65536, 19, 524325, 65536, 19, 589861, 65536, 19, 196646, 65536, 19, 262182, 65536, 19, 327718, 65536, 19, 393254, 65536, 19, 458790, 65536, 19, 524326, 65536, 19, 589862, 65536, 19, 196647, 65536, 19, 262183, 65536, 19, 327719, 65536, 19, 393255, 65536, 19, 458791, 65536, 19, 524327, 65536, 19, 589863, 65536, 19, 196648, 65536, 19, 262184, 65536, 19, 327720, 65536, 19, 393256, 65536, 19, 458792, 65536, 19, 524328, 65536, 19, 589864, 65536, 19, 655360, 65536, 19, 720896, 65536, 19, 786432, 65536, 19, 851968, 65536, 19, 655361, 65536, 19, 720897, 65536, 19, 786433, 65536, 19, 851969, 65536, 19, 655362, 65536, 19, 720898, 65536, 19, 786434, 65536, 19, 851970, 65536, 19, 655363, 65536, 19, 720899, 65536, 19, 786435, 65536, 19, 851971, 65536, 19, 655364, 65536, 19, 720900, 65536, 19, 786436, 65536, 19, 851972, 65536, 19, 655365, 65536, 19, 720901, 65536, 19, 786437, 65536, 19, 851973, 65536, 19, 655366, 65536, 19, 720902, 65536, 19, 786438, 65536, 19, 851974, 65536, 19, 655367, 65536, 19, 720903, 65536, 19, 786439, 65536, 19, 851975, 65536, 19, 655368, 65536, 19, 720904, 65536, 19, 786440, 65536, 19, 851976, 65536, 19, 655369, 65536, 19, 720905, 65536, 19, 786441, 65536, 19, 851977, 65536, 19, 655370, 65536, 19, 720906, 65536, 19, 786442, 65536, 19, 851978, 65536, 19, 655371, 65536, 19, 720907, 65536, 19, 786443, 65536, 19, 851979, 65536, 19, 655372, 65536, 19, 720908, 65536, 19, 786444, 65536, 19, 851980, 65536, 19, 655373, 65536, 19, 720909, 65536, 19, 786445, 65536, 19, 851981, 65536, 19, 655374, 65536, 19, 720910, 65536, 19, 786446, 65536, 19, 851982, 65536, 19, 655375, 65536, 19, 720911, 65536, 19, 786447, 65536, 19, 851983, 65536, 19, 655376, 65536, 19, 720912, 65536, 19, 786448, 65536, 19, 851984, 65536, 19, 655377, 65536, 19, 720913, 65536, 19, 786449, 65536, 19, 851985, 65536, 19, 655378, 65536, 19, 720914, 65536, 19, 786450, 65536, 19, 851986, 65536, 19, 655379, 65536, 19, 720915, 65536, 19, 786451, 65536, 19, 851987, 65536, 19, 655380, 65536, 19, 720916, 65536, 19, 786452, 65536, 19, 851988, 65536, 19, 655381, 65536, 19, 720917, 65536, 19, 786453, 65536, 19, 851989, 65536, 19, 655382, 65536, 19, 720918, 65536, 19, 786454, 65536, 19, 851990, 65536, 19, 655383, 65536, 19, 720919, 65536, 19, 786455, 65536, 19, 851991, 65536, 19, 655384, 65536, 19, 720920, 65536, 19, 786456, 65536, 19, 851992, 65536, 19, 655385, 65536, 19, 720921, 65536, 19, 786457, 65536, 19, 851993, 65536, 19, 655386, 65536, 19, 720922, 65536, 19, 786458, 65536, 19, 851994, 65536, 19, 655387, 65536, 19, 720923, 65536, 19, 786459, 65536, 19, 851995, 65536, 19, 655388, 65536, 19, 720924, 65536, 19, 786460, 65536, 19, 851996, 65536, 19, 655389, 65536, 19, 720925, 65536, 19, 786461, 65536, 19, 851997, 65536, 19, 655390, 65536, 19, 720926, 65536, 19, 786462, 65536, 19, 851998, 65536, 19, 655391, 65536, 19, 720927, 65536, 19, 786463, 65536, 19, 851999, 65536, 19, 655392, 65536, 19, 720928, 65536, 19, 786464, 65536, 19, 852000, 65536, 19, 655393, 65536, 19, 720929, 65536, 19, 786465, 65536, 19, 852001, 65536, 19, 655394, 65536, 19, 720930, 65536, 19, 786466, 65536, 19, 852002, 65536, 19, 655395, 65536, 19, 720931, 65536, 19, 786467, 65536, 19, 852003, 65536, 19, 655396, 65536, 19, 720932, 65536, 19, 786468, 65536, 19, 852004, 65536, 19, 655397, 65536, 19, 720933, 65536, 19, 786469, 65536, 19, 852005, 65536, 19, 655398, 65536, 19, 720934, 65536, 19, 786470, 65536, 19, 852006, 65536, 19, 655399, 65536, 19, 720935, 65536, 19, 786471, 65536, 19, 852007, 65536, 19, 655400, 65536, 19, 720936, 65536, 19, 786472, 65536, 19, 852008, 65536, 19, 917503, 786432, 22, 851967, 786432, 22, 65535, 786432, 22, 131071, 786432, 22, 196607, 786432, 22, 262143, 786432, 22, 327679, 786432, 22, 393215, 786432, 22, 458751, 786432, 22, 524287, 786432, 22, 589823, 786432, 22, 655359, 786432, 22, 720895, 786432, 22, 786431, 786432, 22, 41, 786432, 22, 65577, 786432, 22, 131113, 786432, 22, 196649, 786432, 22, 262185, 786432, 22, 327721, 786432, 22, 393257, 786432, 22, 458793, 786432, 22, 524329, 786432, 22, 589865, 786432, 22, 655401, 786432, 22, 720937, 786432, 22, 786473, 786432, 22, 852009, 786432, 22, 983039, 786432, 22, 917504, 786432, 22, 917505, 786432, 22, 917506, 786432, 22, 917507, 786432, 22, 917508, 786432, 22, 917509, 786432, 22, 917510, 786432, 22, 917511, 786432, 22, 917512, 786432, 22, 917513, 786432, 22, 917514, 786432, 22, 917515, 786432, 22, 917516, 786432, 22, 917517, 786432, 22, 917518, 786432, 22, 917519, 786432, 22, 917520, 786432, 22, 917521, 786432, 22, 917522, 786432, 22, 917523, 786432, 22, 917524, 786432, 22, 917525, 786432, 22, 917526, 786432, 22, 917527, 786432, 22, 917528, 786432, 22, 917529, 786432, 22, 917530, 786432, 22, 917531, 786432, 22, 917532, 786432, 22, 917533, 786432, 22, 917534, 786432, 22, 917535, 786432, 22, 917536, 786432, 22, 917537, 786432, 22, 917538, 786432, 22, 917539, 786432, 22, 917540, 786432, 22, 917541, 786432, 22, 917542, 786432, 22, 917543, 786432, 22, 917544, 786432, 22, 917545, 786432, 22)

[node name="player_p2" parent="." instance=ExtResource("3_kp1fu")]
texture_filter = 1
position = Vector2(97, 157)
scale = Vector2(1, 1)
collision_layer = 3
SPEED = 100.0

[node name="light" type="PointLight2D" parent="player_p2"]
texture_filter = 1
position = Vector2(-1.00024, -4.99997)
scale = Vector2(0.387051, 0.251164)
energy = 1.5
shadow_enabled = true
texture = ExtResource("4_jdcjd")
texture_scale = 2.5

[node name="Camera2D" type="Camera2D" parent="player_p2"]
texture_filter = 1
scale = Vector2(0.5, 0.5)
zoom = Vector2(7, 7)
limit_left = -15
limit_top = 0
limit_right = 670
limit_bottom = 240
position_smoothing_enabled = true

[node name="score_label" type="Label" parent="player_p2/Camera2D"]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = -80.0
offset_right = 132.0
offset_bottom = -57.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_wo6ft")
theme_override_font_sizes/font_size = 32
text = "0 / 10 food collected"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DialogPlayer" parent="player_p2" instance=ExtResource("6_4tm0e")]
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = 26.0
offset_bottom = 26.0
grow_vertical = 0
scale = Vector2(0.1, 0.1)

[node name="borders" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders"]
shape = SubResource("SegmentShape2D_odv41")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="borders"]
position = Vector2(0, -227)
shape = SubResource("SegmentShape2D_mf12q")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="borders"]
shape = SubResource("SegmentShape2D_jrm8t")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="borders"]
shape = SubResource("SegmentShape2D_b72an")

[node name="collectables" type="Node" parent="."]

[node name="Sea_shell" parent="collectables" instance=ExtResource("7_ss8st")]
texture_filter = 1
position = Vector2(232, 77)

[node name="Sea_grass" parent="collectables" instance=ExtResource("8_k6ni2")]
texture_filter = 1
position = Vector2(508, 170)

[node name="Sea_shell2" parent="collectables" instance=ExtResource("7_ss8st")]
texture_filter = 1
position = Vector2(246, 211)

[node name="Sea_grass2" parent="collectables" instance=ExtResource("8_k6ni2")]
texture_filter = 1
position = Vector2(410, 89)

[node name="Sea_shell3" parent="collectables" instance=ExtResource("7_ss8st")]
texture_filter = 1
position = Vector2(426, 171)

[node name="Sea_grass3" parent="collectables" instance=ExtResource("8_k6ni2")]
texture_filter = 1
position = Vector2(207, 125)

[node name="Sea_shell4" parent="collectables" instance=ExtResource("7_ss8st")]
texture_filter = 1
position = Vector2(512, 61)

[node name="Sea_grass4" parent="collectables" instance=ExtResource("8_k6ni2")]
texture_filter = 1
position = Vector2(313, 175)

[node name="Sea_shell5" parent="collectables" instance=ExtResource("7_ss8st")]
texture_filter = 1
position = Vector2(593, 159)

[node name="Sea_grass5" parent="collectables" instance=ExtResource("8_k6ni2")]
texture_filter = 1
position = Vector2(148, 64)

[node name="dive_out_area" type="Area2D" parent="."]
position = Vector2(7, -5)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="dive_out_area"]
position = Vector2(325.5, 10.5)
shape = SubResource("RectangleShape2D_7ip0t")

[connection signal="body_entered" from="dive_out_area" to="." method="_on_dive_out_area_body_entered"]
[connection signal="body_exited" from="dive_out_area" to="." method="_on_dive_out_area_body_exited"]
